feat: add swagger doc for + and -
